UY-1573 convert OAuth client config classes to records